bowling.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    color:#414042;
}
.black{
	background-color:black;
}
.orange{
	background-color:orange;
}
.white{
	background-color:white;
}
/* [class*=white]{
	height: 700px;
}
[class*=orange]{
    height: 700px;} */


/* meant to be removed/commented when header is added */
[class*=black]{
	height: auto;
}
[class*=black2]{
	height: 100px;
}
[class*=nested]{
	height: 300px;
}
body {
    font-family: 'Montserrat', sans-serif;
    color:#414042;
}
h2{
        text-align:center;
        padding:10px;
}
h1{
    padding:5px;
    text-align:center;
}
#res{
    text-align:center;
}
/* #res{
    margin-left: 330px;
} */
#slider1{
        position:relative;
        left:55px;
    }
#footer{
    padding-top:10px;
    height:auto;
    color: white;
}
#timepicker{
    border: 3px solid #00B6C9;
    overflow: auto;
    height:200px;
    width: 200px;
    text-align:left;
}
#namepicker{
    position:relative;
/*     left:120px; */
    top:60px;
/*     border: 3px solid #00B6C9; */
}
#one{
    width:50px;
}
#two{
    width:50px;
    position:relative;
    bottom:260px;
    left:80px;
}
#three{
    width:50px;
}
#four{
    width:50px;
    position:relative;
    bottom:145px;
    left:20px;
}
#graphic{
    height:90px;
/*     padding-top:5px;
    padding-left:100px; */
}
a{
    color:white;
}
a:hover{
    color:white;
}


/* STEPS ONE AND THREE ARE UNDER THIS COMMENT*/


/* Customize the label (the container) */
.container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
  background-color: #F26522;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.ballContainer img {
    width: 50px;
    height: 50px;
    margin: auto;    
    display: block;
}

#laneInput {
    margin: auto;
    
}
#datepicker {
/*     margin-left: auto; */
/*     align-items: center;
  justify-content: center; */
}
.box {
  display: flex;
  align-items: center;
  justify-content: center;
}
#laneIcon{
/*     margin-left:120px; */
}
#laneInput{
/*     margin-left:100px; */
}
#lanetwo{
    margin-left:20px;
}
#laneone{
        margin-left:-20px;    
}
#ball2{
/*     margin-left:50px; */
}
.flex-container {
  display: flex;
  justify-content: center;
  align-items: center;
}









/* header {
    background-color: black;
    padding: 1px;
    text-align: center;
    font-size: 50px;
    color: white;
    float: center
} */






/* img{
    width: 500px;
    height: 3000px;
    right: 300px;

} */

/* red{
	background-color: #d62839;
    height: 300px;
} */

/* orange {
background-color: #fe5f00;
height: 700px;
width: 9000px;

} */


h6{

text-align: center;
font-size: 13px
top: 250px;
    
}

.message{
    
    font-size: 15px;
    color: #FFFFFF;
    
}
#msg{
/*         width:60%; */
    right: 0px;
}

h4{
   right:40%;
    top:40%;
    color: #FFFFFF;
    position: absolute;
    font-size: 36px;

}

/* #headercarousel{
 height:200px;   
} */
/* #headslider{
    height:1%;
} */
#firstslide{
    height:450px;
}
#secondslide{
    height:450px;
}
#thirdslide{
    height:450px;
}
#fourthslide{
    height:450px;
}
.carousel-caption{
    top: 50%;
transform: translateY(-30%);
}
h3{
    font-size:37px;
}

